--- a/SUP_LIKE/index.html
+++ b/SUP_LIKE/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="site.css">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="site.css">
+	
     <script src="./vender/fontawesome/js/all.min.js"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="stylee.css">
@@ -15,7 +16,25 @@
 	<header>
 		<div class="header">
 			<p>
-				Thông báo(06.09.2022)Khuyến mãi: Giảm giá 3 loại view trong 2 ngày(chỉ 15k - 17k và 23K). Loại 23k tốc độ tốt chỉ còn 17k. Hãy xem và sử dụng phân phối tốt chỉ trong 2 ngày. Xin cảm ơn Tăng View Youtobe kiếm được tiền...Hoặc Liên Hệ-(Trực Web chat Zalo Ms Ngọc 0911222323-Mr Đại 0373762791-Mr Quốc 097.3636.888-Đừng ngại! Vui lòng hỏi để sử dụng dịch vụ phù hợp nhất.)Thank!
+				<span style="background-color: #2b00fe; color: white;">
+					<span style="box-sizing:boder-box; font-weight: bolder;">
+						Thông báo(06.09.2022)Khuyến mãi: Giảm giá 3 loại view trong 2 ngày(chỉ 15k - 17k và 23K). Loại 23k tốc độ tốt chỉ còn 17k. Hãy xem và sử dụng phân phối tốt chỉ trong 2 ngày. Xin cảm ơn Tăng View Youtobe kiếm được tiền...
+					</span>
+					<span style="box-sizing: border-box;">
+						<b>
+							<i>&nbsp;</i>
+						</b>
+					</span>
+					<span>
+						<b>
+							<i>
+								<span style="font-family: Barlow; font-size: 16px;">Hoặc Liên Hệ</span>
+							</i>
+						</b>
+						-
+					</span>
+					(Trực Web chat Zalo Ms Ngọc 0911222323 - Mr Đại 0373762791 - Mr Quốc 097.3636.888-Đừng ngại! Vui lòng hỏi để sử dụng dịch vụ phù hợp nhất.)Thank !
+				</span>
 			</p>
 		</div>
 	</header>
@@ -25,19 +44,27 @@
 				<li><a href="">Đăng ký tài khoản mới</a></li>
 				<li><a href="">Dịch vụ</a></li>
 				<li><a href="">API</a></li>
-				<li><a href="">TH</a></li>
+				
+                <select name="language" id="language">
+      				<option value="volvo"><b>TH</b></option>
+      				<option value="saab">Tiếng Việt</option>
+      				<option value="mercedes">English</option>
+      				<option value="audi">Laothian</option>
+      				<option value="audi">Hindi</option>
+  					</select>
 			</ul>
 		</div>
 
 
 		<section class="login">
-			<div>
+			<div class="title">
 			<h3>SmartMarketingChayNhanh.com</h3>
 			<h5>Cung cấp dịch vụ Youtube,Tiktok,Facebook,Traffic Web,Instagram,Twitter,Quảng cáo Ads...và nhiều hơn thế.</h5>
 		</div>
+		<div class="adress_form">
 		<form class="row g-3">
          <div class="col-md-6">
-          <label for="inputEmail4" class="form-label">Email</label>
+          <label for="inputEmail4" class="form-label">Username</label>
             <input type="email" class="form-control" id="inputEmail4">
          </div>
          <div class="col-md-6">
@@ -47,17 +74,31 @@
   		<div class="col-md-6">
    	 	<div class="form-check">
       		<input class="form-check-input" type="checkbox" id="gridCheck">
-     		 <label class="form-check-label" for="gridCheck">Check me out</label>
+     		 <label class="form-check-label" for="gridCheck">Remember me</label>
     	</div>
   		</div>
   			<div class="col-md-4">
-    		<label for="inputState" class="form-label">State</label>  
+    		<label for="inputState" class="form-label"><a href="">Forgot password?</a></label>  
   		</div>
-  		<div class="d-grid gap-2">
-  			<button class="btn btn-primary" type="button">Button</button>
+  		<!--<div class="d-grid gap-2">
+  			<button class="btn btn-primary" type="button">Sign in</button>
+
+
+  			<div class="d-grid gap-2">
+  			<button class="btn" type="button">Sign in</button>
+  			<br\>
 		</div>
   		
+  	-->
+  	<div class="buttonnn">
+  	<button class="buttonn" type="Sign up">Sign up</button> 
+  </div>
+
+  	<div class="last_form">
+  		<p>Do not have an account?  <a href="">     Sign up   </a></p>
+  		</div>
 </form>
+</div>
 
 </section>
 
