--- a/SUP_LIKE/index.html
+++ b/SUP_LIKE/index.html
@@ -104,6 +104,509 @@
 
 
 
+<!-- ============ content ============ -->
+
+	<div class="content">
+
+		<!-- ===== block_1 ===== title -->
+		<div id="block_1">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12" style="max-width: 85% !important; margin: auto;">
+						<p style="text-align: center; ">
+							<span style="font-weight: bold;">
+								Dưới đây là một số trải nghiệm của khách hàng từng sử dụng dịch vụ
+							</span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_2 ===== -->
+		<div id="block_2" class="block_item">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+							title="YouTube video player" frameborder="0"
+							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
+
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_3 ===== -->
+		<div id="block_3" class="block_item">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_4 ===== -->
+		<div id="block_4" class="block_item">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_5 ===== -->
+		<div id="block_5" class="block_item">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_6 ===== -->
+		<div id="block_6" class="block_item">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_7 ===== -->
+		<div id="block_7" class="block_item">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_8 ===== -->
+		<div id="block_8" class="block_item">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_9 ===== -->
+		<div id="block_9" class="block_item">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_10 ===== -->
+		<div id="block_10">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_11 ===== button -->
+		<div id="block_11">
+			<div class="container">
+				<div class="row">
+					<div class="col-12">
+						<p style="text-align: center; ">
+							<span>
+								Use SMM services we offer on our panel to quickly and efficiently boost the growth of your
+								social media accounts.
+							</span>
+						</p>
+					</div>
+				</div>
+				<div class="row">
+					<div class="col-12">
+						<div style="text-align: center; ">
+							<a style="color: white;" href="" class="btn">bat dau</a>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_12 ===== title -->
+		<div id="block_12">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12" style="max-width: 80% !important; margin: auto;">
+						<h3 style="text-align: center; ">
+							Câu hỏi thường gặp (FAQ)
+						</h3>
+						<p>
+							<span>
+								Nhân viên của chúng tôi đã chọn một số câu hỏi phổ biến nhất về ChayNhanh.com và trả lời chúng.
+							</span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_13 ===== -->
+		<div id="block_13">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-10" style="max-width: 80% !important; margin: auto;">
+						<div class="row">
+							<div class="col-lg-12">awsd</div>
+							<div class="col-lg-12">asdf</div>
+							<div class="col-lg-12">af</div>
+							<div class="col-lg-12">zv</div>
+							<div class="col-lg-12">sf</div>
+							<div class="col-lg-12">asdf</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_14 ===== -->
+		<div id="block_14">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-3 bg-primary">
+						<p>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/T2OPpG-p2VY"
+								title="YouTube video player" frameborder="0"
+								allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen></iframe>
+						</p>
+					</div>
+					<div class="col-md-9 bg-success">
+						<p>MS HT: Huyền Trân Marketing - Một cô nàng nhanh nhẹn và hoạt bát. Sở hữu một cửa hàng thời trang
+							phân phối toàn Quốc. Nhằm thúc đẩy dịch vụ hiệu quả nhanh HT đã sử dụng dịch vụ của HocNhanh.vn
+							bằng web auto ChayNhanh.com thường xuyên.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_15 ===== title -->
+		<div id="block_15">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-12" style="max-width: 80% !important; margin: auto;">
+						<h3 style="text-align: center; ">
+							Social Media Marketing Việt Nam
+						</h3>
+						<p>
+							<span>
+								ChayNhanh.com là web cung cấp dịch vụ Youtube, Tiktok, Faceboook, Traffic Web, Instagram,
+								Twitter, Quảng cáo Ads....và nhiều hơn thế. Giúp bạn tăng view sub like và nhiều dịch vụ tiếp
+								thị truyền thông khác tốt nhất.
+							</span>
+						</p>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!-- ===== block_16 ===== -->
+		<div id="block_16">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-10" style="max-width: 80% !important; margin: auto;">
+						<div class="row">
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Web mua dịch vụ view sub like ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Trang web tăng view Youtube tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Mua view Youtube ở đâu tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Cách lấy Link Video Youtube ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									App tăng view Youtube hiệu quả bằng chaynhanh.com ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Tăng like Youtube có lợi ích gì không ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Web mua dịch vụ view sub like ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Trang web tăng view Youtube tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Mua view Youtube ở đâu tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Cách lấy Link Video Youtube ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									App tăng view Youtube hiệu quả bằng chaynhanh.com ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Tăng like Youtube có lợi ích gì không ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Web mua dịch vụ view sub like ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Trang web tăng view Youtube tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Mua view Youtube ở đâu tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Cách lấy Link Video Youtube ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									App tăng view Youtube hiệu quả bằng chaynhanh.com ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Tăng like Youtube có lợi ích gì không ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Web mua dịch vụ view sub like ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Trang web tăng view Youtube tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Mua view Youtube ở đâu tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Cách lấy Link Video Youtube ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									App tăng view Youtube hiệu quả bằng chaynhanh.com ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Tăng like Youtube có lợi ích gì không ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Web mua dịch vụ view sub like ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Trang web tăng view Youtube tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Mua view Youtube ở đâu tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Cách lấy Link Video Youtube ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									App tăng view Youtube hiệu quả bằng chaynhanh.com ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Tăng like Youtube có lợi ích gì không ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Web mua dịch vụ view sub like ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Trang web tăng view Youtube tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Mua view Youtube ở đâu tốt ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Cách lấy Link Video Youtube ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									App tăng view Youtube hiệu quả bằng chaynhanh.com ?
+								</a>
+							</div>
+							<div class="col-lg-6 col-md-6 co-sm-12">
+								<a href="">
+									Tăng like Youtube có lợi ích gì không ?
+								</a>
+							</div>
+						</div>
+
+					</div>
+				</div>
+			</div>
+		</div>
+
+	</div>
 
 
 	
